[gd_scene load_steps=2 format=3 uid="uid://coursesscene"]

[ext_resource type="Script" path="res://Scripts/Courses.gd" id="1"]

[node name="Courses" type="Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2(0, 0)
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "Choose your level"
custom_minimum_size = Vector2(0, 32)

[node name="LevelGrid" type="GridContainer" parent="VBox"]
layout_mode = 2
columns = 3
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 200)
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16

[node name="LevelDetail" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
visible = false

[node name="Header" type="HBoxContainer" parent="VBox/LevelDetail"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="LevelTitle" type="Label" parent="VBox/LevelDetail/Header"]
layout_mode = 2
text = "Level detail"

[node name="SkillsHost" type="Control" parent="VBox/LevelDetail"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
*** End File